MODEXPW-635 - Expose template tokens in EDIFACT email export (#737)
* Add order/line template context for EDIFACT email export

Introduce OrderEmailContext, a structured payload passed to mod-template-engine so Mustache
templates can reference order and PO line fields. MapToEdifactTasklet serializes the assembled
orders into the job execution context (new ACQ_EXPORT_ORDERS job parameter) so SendToEmailTasklet
can deserialize them, build the context via OrderEmailContextMapper, and attach it to
TemplateProcessingRequest.context.

* Structure order email context into nested typed sub-contexts

Group each PO line's fields under cost, details, vendorDetail and fundDistribution sub-contexts,
resolve shipTo/billTo to TenantAddressContext and createdBy to a UserContext (via
OrderMetadataContext), and expose details.productIds as a typed array. OrderContext carries
poNumber, orderType, metadata, shipTo and billTo; OrderLineContext carries poLineNumber,
titleOrPackage, publisher, publicationDate, edition, rush, contributors, details, cost,
fundDistribution and vendorDetail.

* Resolve shipTo/billTo UUIDs to addresses in OrderEmailContext

Replace raw UUID stringification with ConfigurationService address lookups for shipTo and billTo,
returning empty strings instead of null for absent fields.

* Resolve order createdBy from userId via new UserService

Add UserService to resolve the order creator into a UserContext (id, firstName, lastName,
fullName), falling back to username when the personal names are blank or absent.

* Add OrganizationContext (vendor) to OrderEmailContext

Expose the vendor organization as name plus a primaryAddress, selected only from an address
flagged as primary.

* Add contributors context to order-line email templates

Expose each PO line's contributors with the contributor name, name-type UUID, and resolved type
name, resolved via a cached ContributorNameTypeService mirroring the identifier-types lookup.
Register ContributorNameTypeClient and requir